<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_unit1"
        android:layout_width="164dp"
        android:layout_height="33dp"
        android:text="@string/tv_unit1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <TextView
        android:id="@+id/tv_unit2"
        android:layout_width="168dp"
        android:layout_height="35dp"
        android:text="@string/tv_unit2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_unit1"
        app:layout_constraintTop_toBottomOf="@+id/tv_unit1"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/tv_unit3"
        android:layout_width="163dp"
        android:layout_height="40dp"
        android:text="@string/tv_unit3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_unit2"
        app:layout_constraintTop_toBottomOf="@+id/tv_unit2"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/tv_value1"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:text="@string/tv_value1"
        android:textAlignment="textEnd"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_unit1"
        app:layout_constraintEnd_toStartOf="@+id/tv_unit1"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_unit1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_value2"
        android:layout_width="138dp"
        android:layout_height="43dp"
        android:layout_marginStart="112dp"
        android:text="@string/tv_value2"
        android:textAlignment="textEnd"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_unit2"
        app:layout_constraintEnd_toEndOf="@+id/tv_value1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_unit2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_value3"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:layout_marginStart="132dp"
        android:text="@string/tv_value3"
        android:textAlignment="textEnd"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_unit3"
        app:layout_constraintEnd_toEndOf="@+id/tv_value2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_unit3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_value"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_value"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Spinner
        android:id="@+id/spinner_units"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/spinner_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_value"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <ImageButton
        android:id="@+id/ib_length"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_button_length"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884"
        app:srcCompat="@drawable/length_icon" />

    <ImageButton
        android:id="@+id/ib_temperature"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_button_temperature"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884"
        app:srcCompat="@drawable/temperature_icon" />

    <ImageButton
        android:id="@+id/ib_weight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_button_weight"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884"
        app:srcCompat="@drawable/weight_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>